<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grammar_structure_field"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/grammar_structure_content_title"
                android:text="@string/th_grammar_structure"
                android:textColor="@color/items_name"
                android:textSize="16sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/grammar_structure_content"
                    android:text="N1　の　N２"
                    android:textColor="@color/meaning_color"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grammar_explanation_field"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/grammar_explanation_content_title"
                android:text="@string/th_grammar_explanation"
                android:textColor="@color/items_name"
                android:textSize="16sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/grammar_explanation_content"
                    android:text="Của,…"
                    android:textColor="@color/meaning_color"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grammar_example_field"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/grammar_example_content_title"
                android:text="@string/th_example"
                android:textColor="@color/items_name"
                android:textSize="16sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/grammar_example_content"
                    android:text="富士大学の学生
ふじだいがくの がくせい 。
Học sinh của trường đại học Phú Sỹ.
"
                    android:textColor="@color/meaning_color"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
