<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewLessonPageActivity"
    tools:showIn="@layout/activity_new_lesson_page"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3f97b5"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_lesson_title"
            android:text="@string/title_activity_new_lesson_page"
            android:background="#3f97b5"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_lesson_name"
                android:text=""
                android:background="#3f97b5"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/current_course"
        android:text="@string/incomplete_course"
        android:textSize="10dp"
        android:padding="3dp"
        android:textColor="@android:color/holo_red_light"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageButton
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:id="@+id/btn_vocabulary"
                android:onClick="doVocabularyCourseLearning"
                android:background="@drawable/ibtn_vocabulary"
                android:layout_margin="20dp"/>
            <ImageButton
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:text="@string/Grammar"
                android:id="@+id/btn_grammar"
                android:onClick="doGrammarCourseLearning"
                android:layout_margin="20dp"
                android:background="@drawable/ibtn_grammar"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageButton
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_margin="20dp"
                android:id="@+id/btn_conversation"
                android:onClick="doConversationCourseLearning"
                android:background="@drawable/ibtn_conversation"/>
            <ImageButton
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_margin="20dp"
                android:id="@+id/btn_listening"
                android:onClick="doListeningCourseLearning"
                android:background="@drawable/ibtn_listening"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageButton
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_margin="20dp"
                android:id="@+id/btn_reading"
                android:onClick="doSpeakingCourseLearning"
                android:background="@drawable/ibtn_reading"/>
            <ImageButton
                android:layout_width="75dp"
                android:layout_height="92dp"
                android:layout_margin="20dp"
                android:id="@+id/btn_kanji"
                android:onClick="doKanjiCourseLearning"
                android:background="@drawable/ibtn_kanji"/>
        </TableRow>
    </TableLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageButton
            android:layout_width="75dp"
            android:layout_height="92dp"
            android:id="@+id/btn_exercise"
            android:onClick="doExerciseCourseLearning"
            android:background="@drawable/ibtn_exercise"/>
    </LinearLayout>

</LinearLayout>
